[gd_scene load_steps=14 format=3 uid="uid://cat86ynclxou1"]

[ext_resource type="PackedScene" uid="uid://cj3rs2iq2bkqq" path="res://obstacles/rocks_large_2.tscn" id="2_43u3l"]
[ext_resource type="Script" path="res://scripts/buttons_end.gd" id="3_fedqy"]
[ext_resource type="PackedScene" uid="uid://b0d64nu6rf6qh" path="res://assets/Models/snow-flat-large.glb" id="3_pki4s"]
[ext_resource type="PackedScene" uid="uid://dm65fhsmxbrbw" path="res://assets/Models/snow-bunker.glb" id="4_5vpue"]
[ext_resource type="PackedScene" uid="uid://cnjdbvc4xuiuy" path="res://assets/Models/sled.glb" id="5_e5p7j"]
[ext_resource type="PackedScene" uid="uid://x234270gmg5t" path="res://assets/Models/snowman.glb" id="6_dxkfk"]

[sub_resource type="Theme" id="Theme_oj14t"]

[sub_resource type="LabelSettings" id="LabelSettings_6wgl1"]
font_size = 40
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_un4xj"]
font_size = 40
outline_color = Color(0, 0, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_2xc43"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_t6u5p"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_c3xk5"]
sky_material = SubResource("ProceduralSkyMaterial_t6u5p")

[sub_resource type="Environment" id="Environment_5mcue"]
background_mode = 2
sky = SubResource("Sky_c3xk5")
tonemap_mode = 2
glow_enabled = true

[node name="EndScene" type="Node3D"]
metadata/_edit_horizontal_guides_ = [87.0, 104.0, 34.0, 24.0, -21.0]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9937, 0.112076, 0, -0.112076, 0.9937, 0, 1.42914, 0.266064)

[node name="ScoreTimeLabel" type="Label" parent="Camera3D"]
clip_contents = true
anchors_preset = -1
anchor_left = 0.422743
anchor_top = 0.143518
anchor_right = 0.608507
anchor_bottom = 0.25463
offset_top = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_oj14t")
label_settings = SubResource("LabelSettings_6wgl1")
metadata/_edit_use_anchors_ = true

[node name="ScorePickUpLabel" type="Label" parent="Camera3D"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.420139
anchor_top = 0.0570988
anchor_right = 0.59809
anchor_bottom = 0.16358
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_un4xj")
metadata/_edit_use_anchors_ = true

[node name="rocks-large2" parent="." instance=ExtResource("2_43u3l")]
transform = Transform3D(1.68943, 0, -0.18932, 0, 1.7, 0, 0.18932, 0, 1.68943, 2.01139, 0, -6.49006)

[node name="snow-flat-large2" parent="." instance=ExtResource("3_pki4s")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -0.287635, -0.491617, -2.30189)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0)
mesh = SubResource("PlaneMesh_2xc43")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5mcue")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Buttons_end" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.390625
anchor_top = 0.765432
anchor_right = 0.587674
anchor_bottom = 0.972222
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_fedqy")
metadata/_edit_use_anchors_ = true

[node name="Play again" type="Button" parent="Buttons_end"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play again"

[node name="Back" type="Button" parent="Buttons_end"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="snow-bunker2" parent="." instance=ExtResource("4_5vpue")]
transform = Transform3D(2.66549, 0, 1.37665, 0, 3, 0, -1.37665, 0, 2.66549, -2.40082, 0, -4.48608)

[node name="sled2" parent="." instance=ExtResource("5_e5p7j")]
transform = Transform3D(-0.285762, -0.398181, -1.41767, -0.653893, 1.32824, -0.241256, 1.31938, 0.572042, -0.426619, -1.38495, 0.560608, -3.57629)

[node name="snowman2" parent="." instance=ExtResource("6_dxkfk")]
transform = Transform3D(0.192309, 1.1819, 0.0782191, -0.993346, 0.117759, 0.662871, 0.645199, -0.170979, 0.997238, 0.920593, 0, -2.61499)

[connection signal="pressed" from="Buttons_end/Play again" to="Buttons_end" method="_on_play_again_pressed"]
[connection signal="pressed" from="Buttons_end/Back" to="Buttons_end" method="_on_back_pressed"]
